<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/d8"
    android:background="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImagenCabecera"
            android:layout_width="match_parent"
            android:transitionName="transition_imagen"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"

            android:src="@color/colorPrimaryDark" />


        <TextView
            android:id="@+id/itemJugadorDorsal"
            android:transitionName="transition_dorsalfecha"

            style="@style/TextViewItemDorsal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/itemImagenCabecera"
            android:layout_alignTop="@id/itemImagenCabecera"
            android:padding="@dimen/d8"
            android:text="00"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <TextView
            android:id="@+id/itemJugadorNombre"

            style="@style/TextViewItemNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="transition_nombre"
            android:layout_below="@id/itemImagenCabecera"

            android:text="JUGADOR" />

       <!-- <TextView
            android:id="@+id/itemJugadorEstadistica"
            android:displ
            style="@style/TextViewItemEstadisticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemJugadorNombre"
            android:padding="@dimen/d8"
            android:text="Ultimo partido:" /> -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/itemJugadorNombre"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >


                <TextView
                    android:id="@+id/itemRowCabeceraVS"
                    style="@style/TextViewItemCabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/itemvs" />

                <TextView
                    android:id="@+id/itemRowCabeceraRES"
                    style="@style/TextViewItemCabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/itemres" />

                <TextView
                    android:id="@+id/itemRowCabeceraMIN"
                    style="@style/TextViewItemCabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/itemmin" />

                <TextView
                    android:id="@+id/itemRowCabeceraPTS"
                    style="@style/TextViewItemCabecera"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/itemptos" />

                <TextView
                    android:id="@+id/itemRowCabeceraREB"
                    style="@style/TextViewItemCabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/itemreb" />

                <TextView
                    android:id="@+id/itemRowCabeceraASI"
                    style="@style/TextViewItemCabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/itemasi" />

                <TextView
                    android:id="@+id/itemRowCabeceraTA"
                    style="@style/TextViewItemCabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/itemtap" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >
                <ImageView
                    android:id="@+id/ItemImagenRival"
                    style="@style/ImageViewItemResultado"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_directo"
                    />
                <ImageView
                    android:id="@+id/itemImagenResultado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_directo"
                    />




                <TextView
                    android:id="@+id/itemRowMIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextViewItemFila"
                    android:gravity="center"

                      />

                <TextView
                    android:id="@+id/itemRowPTS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextViewItemFila"
                    android:gravity="center"
                     />

                <TextView
                    android:id="@+id/itemRowREB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="@style/TextViewItemFila"
                     />

                <TextView
                    android:id="@+id/itemRowASI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="@style/TextViewItemFila"
                      />

                <TextView
                    android:id="@+id/itemRowTA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="@style/TextViewItemFila"
                      />
            </TableRow>
        </TableLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>